Remove unused code

--- a/src/Coevery.Web/DeveloperTools/ListViewDesigner/Views/Admin/Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/ListViewDesigner/Views/Admin/Edit.cshtml
@@ -26,7 +26,7 @@
 
                         <section class="data-row control-group">
                             <div class="span6">
-                                <label class="control-label">@T("Name")</label>
+                                <label class="control-label">@T("Entity")</label>
                                 <div class="controls">
                                     <input type="text" value="@Model.ItemContentType.RemovePartSuffix()" class="span12" disabled="disabled" />
                                     @Html.HiddenFor(m => m.ItemContentType)
