--- a/src/Coevery.Web/DeveloperTools/ListViewDesigner/Views/Admin/List.cshtml
+++ b/src/Coevery.Web/DeveloperTools/ListViewDesigner/Views/Admin/List.cshtml
@@ -1,4 +1,4 @@
-﻿@using Coevery.Core.Projections.Descriptors.Layout
+﻿@*@using Coevery.Core.Projections.Descriptors.Layout
 @model Coevery.DeveloperTools.ListViewDesigner.ViewModels.EntityViewListModel
 
 @helper AddLayoutButton(LayoutDescriptor type) {
@@ -7,11 +7,11 @@
             <i class="icon-plus"></i>&nbsp;@T("Add {0} Grid Layout", type.Type)
         </label>
     </li>
-}
+}*@
 
 <div class="btn-toolbar">
     <div class="btn-group">
-        <button class="btn btn-small btn-success dropdown-toggle" data-toggle="dropdown"
+        @*<button class="btn btn-small btn-success dropdown-toggle" data-toggle="dropdown"
                 data-ng-disabled="isPublished=='False'" title="@T("Works when the entity has been published.")">
             <i class="icon-plus"></i>&nbsp;Add <span class="caret"></span>
         </button>
@@ -19,7 +19,11 @@
             @foreach (var layoutType in Model.Layouts) {
                 @AddLayoutButton(layoutType)
             }
-        </ul>
+        </ul>*@
+        <button class="btn btn-small btn-success" data-ng-disabled="isPublished=='False'" title="@T("Works when the entity has been published.")"
+            data-ng-click="add('Grids','Default')">
+            <i class="icon-plus"></i>&nbsp;New View
+        </button>
     </div>
     <button class="btn btn-small" data-ng-click="getAll()"
             data-ng-disabled="isPublished=='False'" title="@T("Works when the entity has been published.")">
