--- a/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/MultilineText.Edit.cshtml
+++ b/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/MultilineText.Edit.cshtml
@@ -17,7 +17,7 @@
             <text> maxlength="@settings.MaxLength"</text>
         } placeholder="@settings.PlaceHolderText" 
         @if (!string.IsNullOrWhiteSpace(settings.HelpText)) {
-            <text>helper:text='@settings.HelpText'</text>
+            <text>help-text='@settings.HelpText'</text>
         } >@Model.Value</textarea>
     @Html.ValidationMessageFor(m => m.Value)
 </div>
