--- a/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Currency.Edit.cshtml
+++ b/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Currency.Edit.cshtml
@@ -14,7 +14,7 @@
            decimalFormat = "@settings.Length,@settings.DecimalPlaces"
         @if (required != null)
         {<text> required data-msg-required="Please fill this field!"</text> } 
-        @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>helper:text='@settings.HelpText'</text> }
+        @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>help-text='@settings.HelpText'</text> }
         />
     @Html.ValidationMessageFor(m => m.Value)
 </div>
