--- a/src/Coevery.Web/Core/OptionSet/Views/EditorTemplates/Fields/OptionSetField.cshtml
+++ b/src/Coevery.Web/Core/OptionSet/Views/EditorTemplates/Fields/OptionSetField.cshtml
@@ -22,7 +22,7 @@
 
             if (!string.IsNullOrWhiteSpace(settings.HelpText))
             {
-                selectAttributes.Add("helper:text", settings.HelpText);
+                selectAttributes.Add("help-text", settings.HelpText);
             }
             
             var options = Model.OptionItems.Select(t => new SelectListItem { Text = t.Name, Value = t.Id.ToString(), Selected = t.Id == Model.SingleTermId });
@@ -65,7 +65,7 @@
                                 } 
                                 name="@Html.FieldNameFor(m => m.SingleTermId)" 
                                 id="@Html.FieldIdFor(m => m.OptionItems[ti].IsChecked)" data-term="@entry.Name.ToLower()" 
-                                @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>helper:text='@settings.HelpText'</text> } 
+                                @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>help-text='@settings.HelpText'</text> } 
                                 />
                 }
                 else
@@ -80,7 +80,7 @@
                                 } 
                                      name="@Html.FieldNameFor(m => m.OptionItems[ti].IsChecked)" 
                                      id="@Html.FieldIdFor(m => m.OptionItems[ti].IsChecked)" data-term="@entry.Name.ToLower()" 
-                                @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>helper:text='@settings.HelpText'</text> } 
+                                @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>help-text='@settings.HelpText'</text> } 
                                 />
                 }
                     }
