--- a/src/Coevery.Web/Core/Relationships/Views/EditorTemplates/Fields/Reference.Edit.cshtml
+++ b/src/Coevery.Web/Core/Relationships/Views/EditorTemplates/Fields/Reference.Edit.cshtml
@@ -12,7 +12,7 @@
     
     if(!string.IsNullOrWhiteSpace(settings.HelpText))
     {
-        selectAttributes.Add("helper:text", settings.HelpText);
+        selectAttributes.Add("help-text", settings.HelpText);
     }
 }
 <label class="span3 control-label @required" for="@Html.FieldIdFor(m => m.ContentId)">@Model.Field.DisplayName</label>
