--- a/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/Detail.cshtml
+++ b/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/Detail.cshtml
@@ -15,9 +15,7 @@
             <button type="button" class="btn btn-small" co-delete-button data-confirm-message="@T("You really want to delete this entity?")" delete-action="delete(@Model.Id)">
                 <i class="icon-remove"></i>&nbsp;Delete
             </button>
-            <button type="button" data-ng-disabled="isPublished=='False'"
-                    class="btn btn-small" data-ng-click="formDesigner()"
-                title="@T("Works when the entity has been published.")">
+            <button type="button" class="btn btn-small" data-ng-click="formDesigner()">
                 Form Designer
             </button>
         </div>
