Modify list view designer

--- a/src/Coevery.Web/DeveloperTools/ListViewDesigner/Views/Admin/Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/ListViewDesigner/Views/Admin/Edit.cshtml
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </div>
-        <div class="row-fluid">
+        <div class="row-fluid hide" id="preview-section">
             <div class=" form-container edit-mode">
                 <div class="form-horizontal no-border">
                     <fieldset>
