--- a/src/Coevery.Web/Themes/Mooncake/Views/Layout.cshtml
+++ b/src/Coevery.Web/Themes/Mooncake/Views/Layout.cshtml
@@ -127,40 +127,7 @@
                         </div>
                     </div>
                     <div id="header-functions" class="pull-right">
-                        @if (WorkContext.CurrentUser == null) {
-                            <div style="margin-top: 21px;" class="clearfix">
-                                <a style="text-decoration: none" href="@Url.Action("LogOn", new {Controller = "Account", Area = "Coevery.Users", ReturnUrl = Context.Request.RawUrl})">
-                                    <span style="color: #ccc;font-size: 20px">@T("Login")</span>
-                                </a>
-                            </div>
-                        }
-                        else {
-                            <div id="user-info" class="clearfix">
-                                <span class="info">Welcome
-                                    <span class="name">@WorkContext.CurrentUser.UserName</span>
-                                </span>
-                                <div class="avatar">
-                                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                                        <img src="@Href("~/Themes/Mooncake/Styles/images/user.jpg")" alt="Avatar">
-                                    </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li><a href="#"><i class="icol-user"></i>&nbsp;My Profile</a></li>
-                                        <li><a href="@Href("~/DevTools#/Entities")"><i class="icol-application-key"></i>&nbsp;Developer Tools</a></li>
-                                        <li class="divider"></li>
-                                        <li>
-                                            <a href="@Url.Action("LogOff", new {Controller = "Account", Area = "Coevery.Users", ReturnUrl = Context.Request.RawUrl})" rel="nofollow">
-                                                <i class="icol-key"> </i>
-                                                @T("Logout")
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div id="logout-ribbon">
-                                <a href="@Url.Action("LogOff", new {Controller = "Account", Area = "Coevery.Users", ReturnUrl = Context.Request.RawUrl})" rel="nofollow">
-                                    <i class="icon-off"></i></a>
-                            </div>
-                        }
+                        @Display.LoginStatus()
                     </div>
                 </div>
             </div>
