--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsListViewGrid.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsListViewGrid.tt
@@ -2,12 +2,10 @@
 <#@ include file="ListViewCommon.ttinclude" #>
 <#@ parameter type="System.String" name="EntityName" #>
 <#
-	var projectionService = Services.WorkContext.Resolve<IProjectionService>();
-	var listViewPart = Services.ContentManager.Query<ListViewPart, ListViewPartRecord>("ListViewPage").Where(v => v.IsDefault && v.ItemContentType == EntityName).List().FirstOrDefault();
-	var viewModel = projectionService.GetProjectionViewModel(listViewPart.Id);
-    int pageSize = string.IsNullOrEmpty(viewModel.State["PageRowCount"]) ? 10 : int.Parse(viewModel.State["PageRowCount"]);
-	string sortedBy = string.IsNullOrEmpty(viewModel.State["SortedBy"]) ? string.Empty : viewModel.State["SortedBy"];
-    string sortOrder = string.IsNullOrEmpty(viewModel.State["SortMode"]) ? "asc" : viewModel.State["SortMode"];
+	var gridInfo = GetDefaultGridInfo(EntityName);
+    int pageSize = string.IsNullOrEmpty(gridInfo.GridSettings[GridInfoSettings.PageRowCount]) ? 10 : int.Parse(gridInfo.GridSettings[GridInfoSettings.PageRowCount]);
+	string sortedBy = string.IsNullOrEmpty(gridInfo.GridSettings[GridInfoSettings.SortColumn]) ? string.Empty : gridInfo.GridSettings[GridInfoSettings.SortColumn];
+    string sortOrder = string.IsNullOrEmpty(gridInfo.GridSettings[GridInfoSettings.SortMode]) ? "asc" : gridInfo.GridSettings[GridInfoSettings.SortMode];
 #>
 @{
     Style.Require("jqGrid");
