--- a/src/Coevery.Web/Themes/Mooncake/Views/MooncakeResource.cshtml
+++ b/src/Coevery.Web/Themes/Mooncake/Views/MooncakeResource.cshtml
@@ -35,4 +35,7 @@
     Style.Include("site.css");
 
     Script.Include("js/setup.js");
+    Script.Include("js/bootstrap-modalmanager.js");
+    Script.Include("js/bootstrap-modal.js");
+    Style.Include("plugins/bootstrap-modal.css");
 }
